# appartment_visualizer

./: .dockerignore  .gitignore  Dockerfile  Your_First_Scan.ifc  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml
src/: App.jsx  apartmentData.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
