[package]
name = "apartment-visualizer-desktop"
version = "0.1.0"
description = "Desktop shell for Apartment Visualizer"
authors = ["Apartment Visualizer"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
